# aws_strands_agent

./: pyproject.toml  test.py
src/: aws_strands_agent - Shortcut.lnk
src/aws_strands_agent/agents/: financial_analyst.py  marketing_expert.py  orchestrator.py  report_writer.py  research_specialist.py
src/aws_strands_agent/tools/: calculator.py  web_scraper.py
src/aws_strands_agent/workflows/: strategy_pipeline.py
